--- a/sass/style.scss
+++ b/sass/style.scss
@@ -270,7 +270,7 @@ body {
   }
 
   .mobile-nav {
-    z-index: 4;
+    z-index: 5;
   }
   .showcase {
     .showcase-text {
